@@ -60,6 +60,7 @@ enum TextStyle
   TS_ACTIVE_CELL_BRACKET,
   TS_CURSOR,
   TS_SELECTION,
+  TS_EQUALSSELECTION,
   TS_OUTDATED,
   TS_CODE_COMMENT,
   TS_CODE_VARIABLE,
@@ -70,6 +71,6 @@ enum TextStyle
   TS_CODE_ENDOFLINE
 };
 
-#define STYLE_NUM 31
+#define STYLE_NUM 32
 
 #endif // TEXTSTYLE_H
