@@ -26,6 +26,7 @@ Current:
   * Ctrl+Tab now launches the autocompletion (or content assistant, if available)
   * on wxGtk we now have a content assistant that is based on the surprisingly powerful
 	autocompletion feature.
+  * Text equal to the text currently selected text now is highlighted in the editor.
 
 15.04.0:
   * wxWidgets 3.0 is now a mandatory requirement
